melhorias na pagina cursos

--- a/src/Views/auth/register.twig
+++ b/src/Views/auth/register.twig
@@ -100,17 +100,18 @@
                 <button id="btn-submit" type="submit" class="btn primary">Cadastrar</button>
             </div>
 
-            <div id="social-login" class="social-login">
-                <p id="social-text">Ou cadastre-se com</p>
-                <div id="social-buttons" class="social-buttons">
-                    <button type="button" id="btn-google" class="btn social google">
-                        <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path d="M12.545 10.239v3.821h5.445c-0.712 2.315-2.647 3.972-5.445 3.972-3.332 0-6.033-2.701-6.033-6.032s2.701-6.032 6.033-6.032c1.498 0 2.866 0.549 3.921 1.453l2.814-2.814c-1.786-1.667-4.166-2.685-6.735-2.685-5.522 0-10 4.477-10 10s4.478 10 10 10c8.396 0 10-7.524 10-10 0-0.671-0.069-1.325-0.189-1.955h-9.811z"/>
-                        </svg>
-                        <span id="google-text">Cadastre-se com Google</span>
-                    </button>
-                </div>
-            </div>
+<div id="social-login" class="social-login">
+    <p id="social-text">Ou cadastre-se com</p>
+    <div id="social-buttons" class="social-buttons">
+        <a href="/auth/google" class="btn social google" id="btn-google">
+            <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M12.545 10.239v3.821h5.445c-0.712 2.315-2.647 3.972-5.445 3.972-3.332 0-6.033-2.701-6.033-6.032s2.701-6.032 6.033-6.032c1.498 0 2.866 0.549 3.921 1.453l2.814-2.814c-1.786-1.667-4.166-2.685-6.735-2.685-5.522 0-10 4.477-10 10s4.478 10 10 10c8.396 0 10-7.524 10-10 0-0.671-0.069-1.325-0.189-1.955h-9.811z"/>
+            </svg>
+            <span id="google-text">Cadastre-se com Google</span>
+        </a>
+    </div>
+</div>
+
 
             <div id="form-links" class="form-links">
                 Já tem uma conta? <a id="link-login-bottom" href="/login">Faça login</a>
