--- a/src/Views/auth/login.twig
+++ b/src/Views/auth/login.twig
@@ -61,18 +61,18 @@
             <button type="submit" class="btn primary">Entrar</button>
         </div>
 
-        <!-- Social Login -->
-        <div class="social-login">
-            <p>Ou entre com</p>
-            <div class="social-buttons">
-                <button type="button" class="btn social google">
-                    <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M12.545 10.239v3.821h5.445c-0.712 2.315-2.647 3.972-5.445 3.972-3.332 0-6.033-2.701-6.033-6.032s2.701-6.032 6.033-6.032c1.498 0 2.866 0.549 3.921 1.453l2.814-2.814c-1.786-1.667-4.166-2.685-6.735-2.685-5.522 0-10 4.477-10 10s4.478 10 10 10c8.396 0 10-7.524 10-10 0-0.671-0.069-1.325-0.189-1.955h-9.811z"/>
-                    </svg>
-                    <span>Continuar com Google</span>
-                </button>
-            </div>
-        </div>
+<!-- Social Login -->
+<div class="social-login">
+    <p>Ou entre com</p>
+    <div class="social-buttons">
+        <a href="/auth/google" class="btn social google">
+            <svg class="button-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M12.545 10.239v3.821h5.445c-0.712 2.315-2.647 3.972-5.445 3.972-3.332 0-6.033-2.701-6.033-6.032s2.701-6.032 6.033-6.032c1.498 0 2.866 0.549 3.921 1.453l2.814-2.814c-1.786-1.667-4.166-2.685-6.735-2.685-5.522 0-10 4.477-10 10s4.478 10 10 10c8.396 0 10-7.524 10-10 0-0.671-0.069-1.325-0.189-1.955h-9.811z"/>
+            </svg>
+            <span>Continuar com Google</span>
+        </a>
+    </div>
+</div>
 
         <!-- Register Link -->
         <div class="form-links">
