--- a/src/Views/teacher/courses/create.twig
+++ b/src/Views/teacher/courses/create.twig
@@ -12,6 +12,15 @@
     <label for="description">Descrição:</label><br>
     <textarea name="description" id="description" rows="4"></textarea><br><br>
 
+    <label for="category_id">Categoria:</label><br>
+    <select name="category_id" id="category_id">
+        <option value="">-- Selecione uma categoria --</option>
+        {% for category in categories %}
+            <option value="{{ category.id }}">{{ category.name }}</option>
+        {% endfor %}
+    </select>
+    <br><br>
+
     <button type="submit">Salvar</button>
     <a href="/teacher/courses">Cancelar</a>
 </form>
